fix: add csp nonce to plausible ce script

--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,17 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+		<!-- Privacy-friendly analytics by Plausible -->
+		<script
+			nonce="%sveltekit.nonce%"
+			async
+			src="https://plausible.rishvic.net/js/pa-4Q26e95uwt3vhtWzyWw5J.js"
+		></script>
+		<script nonce="%sveltekit.nonce%">
+			// prettier-ignore
+			window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+			plausible.init();
+		</script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
